<resources>
    <string name="app_name">Jeremy World Transfer</string>
    <string name="title_home">Home</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_history">History</string>
    <string name="title_support">Support</string>
    <string name="welcome">Welcome</string>
    <string name="login_page_text">Please Sign In</string>
    <string name="register_page_text">Please Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home_page_text">Make a Transaction By Going To Transfer From The Menu Below.</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="receiver">Receiver</string>
    <string name="name">Name</string>
    <string name="origin_country">Origin Country</string>
    <string name="origin">Origin</string>
    <string name="country">Country</string>
    <string name="receiving_country">Receiving Country</string>
    <string name="receiving">Receiving</string>
    <string name="original_amount">Original Amount</string>
    <string name="original">Original</string>
    <string name="amount">Amount</string>
    <string name="receiving_amount">Receiving Amount</string>
    <string name="confirm">Confirm</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="help_info">Make a transaction by going to the Transfer page, filling in the form and then submitting. You can also view Transaction history by going to the History page.</string>
    <string name="contact_info">For additional help, go to our Facebook page by going to this link: https://www.facebook.com/Jeremy-World-Transfer-105766574420526/. Or send an email to ntu.jeremy.wong@gmail.com.</string>
    <string name="app_version">App Version 1.0 (Beta)</string>
    <string name="about_page_text">This application was developed by Jeremy Wong at Nottingham Trent University, as part of their Final Year Project.</string>
</resources>
