<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fyp.jeremyworldtransfer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transfer"
        android:name="com.fyp.jeremyworldtransfer.ui.transfer.TransferFragment"
        android:label="@string/title_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.fyp.jeremyworldtransfer.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_support"
        android:name="com.fyp.jeremyworldtransfer.ui.support.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />
</navigation>
