<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.HistoryFragment" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0, 1, 2, 3"
       >
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:text="@string/origin"
                 />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:text="@string/original"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:text="@string/receiving"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="3"
                android:text="@string/receiving" />
        </TableRow>

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="1dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="0"
                android:text="@string/country" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:text="@string/country" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:text="@string/country" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_column="3"
                android:text="@string/amount" />
            </TableRow>
        <TableRow

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"

        >

        <TextView
            android:id="@+id/row3col1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_column="0"
            android:text="" />
        <TextView
            android:id="@+id/row3col2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_column="1"
            android:text="" />
        <TextView
            android:id="@+id/row3col3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_column="2"
            android:text="" />
        <TextView
            android:id="@+id/row3col4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_column="3"
            android:text="" />
    </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>